<resources>
    <string name="app_name">ScoreKeeper</string>
    <string name="team_A_name">TEAM A</string>
    <string name="team_B_name">TEAM B</string>
    <string name="initial_Score">0</string>
    <string name="three_points">+3 Points</string>
    <string name="two_points">+2 Points</string>
    <string name="one_point">Free Throw</string>
    <string name="fouls">Add Foul</string>
    <string name="reset_score">Reset</string>
    <string name="img_description">Basketball Score Keeper</string>
</resources>
