<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.scorekeeper.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <!-- Background image -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/img_description"
            android:scaleType="centerCrop"
            android:src="@drawable/basketball" />

        <!-- TEAMS SCORES -->
        <LinearLayout
            android:id="@+id/teams_scores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- TEAM A SCORES: POINTS AND FOULS -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <!-- Team A Name -->
                <TextView
                    style="@style/TextTeamName"
                    android:text="@string/team_A_name" />

                <!-- Team A Score View -->
                <TextView
                    android:id="@+id/team_a_score"
                    style="@style/TextTeamScore"
                    android:layout_marginLeft="@dimen/margin_padding_16"
                    android:layout_marginStart="@dimen/margin_padding_16"
                    android:layout_marginRight="@dimen/width_line"
                    android:layout_marginEnd="@dimen/width_line"
                    android:text="@string/initial_Score"/>

                <!-- Add 3 points for the Team A -->
                <Button
                    style="@style/ButtonStyle"
                    android:onClick="addThreeForTeamA"
                    android:text="@string/three_points" />

                <!-- Add 2 points for the Team A -->
                <Button
                    style="@style/ButtonStyle"
                    android:onClick="addTwoForTeamA"
                    android:text="@string/two_points" />

                <!-- Add 1 point for the Team A -->
                <Button
                    style="@style/ButtonStyle"
                    android:onClick="addOneForTeamA"
                    android:text="@string/one_point" />

                <!-- TEAM A FOULS SCORE -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <!-- Add 1 foul for the Team A -->
                    <Button
                        style="@style/ButtonFoulsStyle"
                        android:onClick="addFoulsForTeamA" />

                    <!-- Text view Fouls for the Team A -->
                    <TextView
                        android:id="@+id/fouls_score_team_a"
                        style="@style/TextTeamFouls" />

                </LinearLayout>

            </LinearLayout>

            <!-- Middle line -->
            <View style="@style/LineStyle" />

            <!-- TEAM B SCORE -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <!-- Team B Name -->
                <TextView
                    style="@style/TextTeamName"
                    android:text="@string/team_B_name" />

                <!-- Team B Score View -->
                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_marginEnd="@dimen/margin_padding_16"
                    android:layout_marginRight="@dimen/margin_padding_16"
                    android:layout_marginStart="@dimen/width_line"
                    android:layout_marginLeft="@dimen/width_line"
                    style="@style/TextTeamScore"
                    android:text="@string/initial_Score" />

                <!-- Add 3 points for the Team B -->
                <Button
                    style="@style/ButtonStyle"
                    android:onClick="addThreeForTeamB"
                    android:text="@string/three_points" />

                <!-- Add 2 points for the Team B -->
                <Button
                    style="@style/ButtonStyle"
                    android:onClick="addTwoForTeamB"
                    android:text="@string/two_points" />

                <!-- Add 1 point for the Team B -->
                <Button
                    style="@style/ButtonStyle"
                    android:onClick="addOneForTeamB"
                    android:text="@string/one_point" />

                <!-- TEAM B FOULS SCORE -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <!-- Add 1 foul for the Team B -->
                    <Button
                        style="@style/ButtonFoulsStyle"
                        android:onClick="addFoulsForTeamB" />

                    <!-- Text view Fouls for the Team B -->
                    <TextView
                        android:id="@+id/fouls_score_team_b"
                        style="@style/TextTeamFouls" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <!-- Reset Button -->
        <Button
            style="@style/ButtonStyle"
            android:layout_below="@+id/teams_scores"
            android:layout_marginTop="@dimen/margin_8"
            android:onClick="resetScore"
            android:text="@string/reset_score" />

    </RelativeLayout>
</ScrollView>
